# simple-ecs-engine

./: CMakeLists.txt  main.cpp
engine/: ApplicationAdapter.cpp  ApplicationAdapter.h  Component.h  GameObject.cpp  GameObject.h
engine/components/: Component.cpp  Component.h  InputComponent.cpp  InputComponent.h  SpriteComponent.cpp  SpriteComponent.h  TransformComponent.cpp  TransformComponent.h
engine/entity/: Entity.cpp  Entity.h
engine/system/: ComponentSystem.cpp  ComponentSystem.h  InputSystem.cpp  InputSystem.h  Registry.cpp  Registry.h  SpriteSystem.cpp  SpriteSystem.h  TransformSystem.cpp  TransformSystem.h
game/: ShooterGame.cpp  ShooterGame.h  Survivor.cpp  Survivor.h
game/system/: GameRegistry.cpp  GameRegistry.h
